<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="619dp" >

        <ImageView
            android:id="@+id/sizeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/outlanded" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textVersion"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="16dp"
            android:text="@string/about_author"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/sizeIcon"
            android:layout_alignTop="@+id/textView3"
            android:src="@drawable/blue_flower" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/configurationTitle"
            android:layout_below="@+id/sizeIcon"
            android:text="@string/about_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/configurationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/sizeIcon"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/sizeIcon"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/versionDateText"
            android:layout_alignBottom="@+id/versionDateText"
            android:layout_alignLeft="@+id/textView2"
            android:text="@string/about_version"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:text="@string/about_url"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000FF" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/versionDateText"
            android:layout_below="@+id/versionDateText"
            android:text="@string/about_version_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textVersion"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="16dp"
            android:text="@string/about_url_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewUrl"
            android:layout_below="@+id/updateButtonHint"
            android:layout_marginTop="16dp"
            android:text="@string/about_proximity_display_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:text="@string/about_proximity_display_text" />

        <Button
            android:id="@+id/updateButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewUrl"
            android:layout_below="@+id/textViewUrl"
            android:text="@string/about_update_button_check" />
        
        <TextView
            android:id="@+id/updateButtonHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/updateButton"
            android:layout_below="@+id/updateButton"
            android:text="@string/about_update_button_hint" />

        <TextView
            android:id="@+id/versionDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_toRightOf="@+id/textVersion"
            android:text="@string/about_version_date"
            android:layout_marginLeft="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/versionDateText"
            android:text="Ibišek"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</ScrollView>