<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLatitude"
        android:layout_below="@+id/textLatitude"
        android:text="@string/longitude"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLongitude"
        android:layout_below="@+id/textLongitude"
        android:text="@string/altitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/configurationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textAltitude"
        android:layout_alignBottom="@+id/textAltitude"
        android:layout_toRightOf="@+id/textAltitude"
        android:text="@string/altitudeUnits"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.ibisek.outlanded.components.ProximityDisplayComponent
        android:id="@+id/proximityDisplayComponent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textAltitude"
        android:layout_below="@+id/textAltitude" />

    <ImageButton
        android:id="@+id/sendSmsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:contentDescription="@string/sendMsg"
        android:src="@drawable/paper_plane"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/selectContactBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/selectContact"
        android:src="@drawable/view_list" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/selectContactBtn"
        android:layout_toLeftOf="@+id/selectContactBtn"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/selectContact" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editPhoneNumber"
        android:layout_below="@id/proximityDisplayComponent"
        android:layout_alignLeft="@id/textAltitude"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textMultiLine" />

</RelativeLayout>